# Laboratory_15

./: CMakeLists.txt  main.c
libs/algorithms/: algorithms.c  algorithms.h
libs/algorithms/testing/: testing.c  testing.h
libs/algorithms/unordered_array/: unordered_array_set.c  unordered_array_set.h
libs/data_structures/: CMakeLists.txt
libs/data_structures/matrix/: matrix.c  matrix.h
libs/data_structures/test_matrix/: test_matrix.c  test_matrix.h
libs/tasks_for_16_laboratory/: tasks.c  tasks.h
libs/test_tasks_for_16_laboratory/: test_tasks_for_16_laboratory.c  test_tasks_for_16_laboratory.h
